--- a/HospitalWebApi/HospitalWebApi.csproj
+++ b/HospitalWebApi/HospitalWebApi.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Startup - Copy.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
