--- a/HospitalWebApi/HospitalWebApi.csproj
+++ b/HospitalWebApi/HospitalWebApi.csproj
@@ -9,11 +9,19 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Properties\PublishProfiles\hlp-hospital-api - FTP.pubxml" />
+    <None Remove="Properties\PublishProfiles\hlp-hospital-api - Web Deploy.pubxml" />
+    <None Remove="Properties\PublishProfiles\webSitegbwzgnae3bigc - Web Deploy.pubxml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Properties\PublishProfiles\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.1" />
